
[package]
name = "solana-bpf-tokenlock"
version = "0.0.1"
description = "Tokenlock smart contract program written in Rust"
authors = ["Solana Maintainers <maintainers@solana.com>"]
repository = "https://github.com/CoMakery/TokenLockupSolana"
license = "Apache-2.0"
homepage = ""
edition = "2018"

[features]
no-entrypoint = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "=1.7.9"
hex = "0.4"

[dev-dependencies]
solana-program-test = "=1.7.9"
solana-sdk = "=1.7.9"

[lib]
name = "tokenlock"
crate-type = ["cdylib", "lib"]
